--- a/mobile-app/rec-ai/index.html
+++ b/mobile-app/rec-ai/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>RecAI - Voice Assistant</title>
+    <title>Echobit - Voice Assistant</title>
 
     <base href="/" />
 
